@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -13,7 +13,6 @@
 package org.openhab.binding.systeminfo.test;
 
 import static java.lang.Thread.sleep;
-import static java.util.stream.Collectors.toList;
 import static org.hamcrest.CoreMatchers.*;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -23,9 +22,10 @@ import java.math.BigDecimal;
 import java.net.UnknownHostException;
 import java.util.Hashtable;
 import java.util.List;
-import java.util.Locale;
+import java.util.Map;
 
 import javax.measure.quantity.ElectricPotential;
+import javax.measure.quantity.Frequency;
 import javax.measure.quantity.Temperature;
 import javax.measure.quantity.Time;
 
@@ -35,14 +35,12 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentMatchers;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 import org.openhab.binding.systeminfo.internal.SysteminfoBindingConstants;
 import org.openhab.binding.systeminfo.internal.SysteminfoHandlerFactory;
-import org.openhab.binding.systeminfo.internal.SysteminfoThingTypeProvider;
 import org.openhab.binding.systeminfo.internal.discovery.SysteminfoDiscoveryService;
 import org.openhab.binding.systeminfo.internal.handler.SysteminfoHandler;
 import org.openhab.binding.systeminfo.internal.model.DeviceNotFoundException;
@@ -53,6 +51,7 @@ import org.openhab.core.config.discovery.DiscoveryResult;
 import org.openhab.core.config.discovery.DiscoveryService;
 import org.openhab.core.config.discovery.inbox.Inbox;
 import org.openhab.core.config.discovery.inbox.InboxPredicates;
+import org.openhab.core.i18n.UnitProvider;
 import org.openhab.core.items.GenericItem;
 import org.openhab.core.items.ItemNotFoundException;
 import org.openhab.core.items.ItemRegistry;
@@ -79,16 +78,12 @@ import org.openhab.core.thing.ThingTypeUID;
 import org.openhab.core.thing.ThingUID;
 import org.openhab.core.thing.binding.ThingHandler;
 import org.openhab.core.thing.binding.ThingHandlerFactory;
-import org.openhab.core.thing.binding.ThingTypeProvider;
 import org.openhab.core.thing.binding.builder.ChannelBuilder;
 import org.openhab.core.thing.binding.builder.ThingBuilder;
 import org.openhab.core.thing.link.ItemChannelLink;
 import org.openhab.core.thing.link.ManagedItemChannelLinkProvider;
 import org.openhab.core.thing.type.ChannelKind;
-import org.openhab.core.thing.type.ChannelType;
-import org.openhab.core.thing.type.ChannelTypeProvider;
 import org.openhab.core.thing.type.ChannelTypeUID;
-import org.openhab.core.thing.type.ThingType;
 import org.openhab.core.types.State;
 import org.openhab.core.types.UnDefType;
 
@@ -99,11 +94,13 @@ import org.openhab.core.types.UnDefType;
  * @author Lyubomir Papazov - Created a mock systeminfo object. This way, access to the user's OS will not be required,
  *         but mock data will be used instead, avoiding potential errors from the OS queries.
  * @author Wouter Born - Migrate Groovy to Java tests
+ * @author Mark Herwege - Processor frequency channels
  */
 @NonNullByDefault
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
 public class SysteminfoOSGiTest extends JavaOSGiTest {
+
     private static final String DEFAULT_TEST_THING_NAME = "work";
     private static final String DEFAULT_TEST_ITEM_NAME = "test";
     private static final String DEFAULT_CHANNEL_TEST_PRIORITY = "High";
@@ -122,23 +119,27 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
      */
     private static final int DEFAULT_TEST_INTERVAL_MEDIUM = 3;
 
-    private @Nullable Thing systemInfoThing;
+    private @Nullable Thing systeminfoThing;
     private @Nullable GenericItem testItem;
 
     private @Mock @NonNullByDefault({}) OSHISysteminfo mockedSystemInfo;
     private @NonNullByDefault({}) SysteminfoHandlerFactory systeminfoHandlerFactory;
     private @NonNullByDefault({}) ThingRegistry thingRegistry;
     private @NonNullByDefault({}) ItemRegistry itemRegistry;
+    private @NonNullByDefault({}) ManagedThingProvider managedThingProvider;
+    private @NonNullByDefault({}) ManagedItemChannelLinkProvider itemChannelLinkProvider;
+    private @NonNullByDefault({}) UnitProvider unitProvider;
+    private @NonNullByDefault({}) VolatileStorageService volatileStorageService;
 
     @BeforeEach
     public void setUp() {
-        VolatileStorageService volatileStorageService = new VolatileStorageService();
+        volatileStorageService = new VolatileStorageService();
         registerService(volatileStorageService);
 
         // Preparing the mock with OS properties, that are used in the initialize method of SysteminfoHandler
         // Make this lenient because the assertInvalidThingConfigurationValuesAreHandled test does not require them
-        lenient().when(mockedSystemInfo.getCpuLogicalCores()).thenReturn(new DecimalType(2));
-        lenient().when(mockedSystemInfo.getCpuPhysicalCores()).thenReturn(new DecimalType(2));
+        lenient().when(mockedSystemInfo.getCpuLogicalCores()).thenReturn(new DecimalType(1));
+        lenient().when(mockedSystemInfo.getCpuPhysicalCores()).thenReturn(new DecimalType(1));
         lenient().when(mockedSystemInfo.getOsFamily()).thenReturn(new StringType("Mock OS"));
         lenient().when(mockedSystemInfo.getOsManufacturer()).thenReturn(new StringType("Mock OS Manufacturer"));
         lenient().when(mockedSystemInfo.getOsVersion()).thenReturn(new StringType("Mock Os Version"));
@@ -156,6 +157,7 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
             systeminfoHandlerFactory = getService(ThingHandlerFactory.class, SysteminfoHandlerFactory.class);
             assertThat(systeminfoHandlerFactory, is(notNullValue()));
         });
+
         if (systeminfoHandlerFactory != null) {
             // Unbind oshiSystemInfo service and bind the mock service to make the systeminfo binding tests independent
             // of the external OSHI library
@@ -167,16 +169,6 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
         }
 
         waitForAssert(() -> {
-            ThingTypeProvider thingTypeProvider = getService(ThingTypeProvider.class,
-                    SysteminfoThingTypeProvider.class);
-            assertThat(thingTypeProvider, is(notNullValue()));
-        });
-        waitForAssert(() -> {
-            SysteminfoThingTypeProvider systeminfoThingTypeProvider = getService(SysteminfoThingTypeProvider.class);
-            assertThat(systeminfoThingTypeProvider, is(notNullValue()));
-        });
-
-        waitForAssert(() -> {
             thingRegistry = getService(ThingRegistry.class);
             assertThat(thingRegistry, is(notNullValue()));
         });
@@ -185,19 +177,35 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
             itemRegistry = getService(ItemRegistry.class);
             assertThat(itemRegistry, is(notNullValue()));
         });
+
+        waitForAssert(() -> {
+            managedThingProvider = getService(ThingProvider.class, ManagedThingProvider.class);
+            assertThat(managedThingProvider, is(notNullValue()));
+        });
+
+        waitForAssert(() -> {
+            itemChannelLinkProvider = getService(ManagedItemChannelLinkProvider.class);
+            assertThat(itemChannelLinkProvider, is(notNullValue()));
+        });
+
+        waitForAssert(() -> {
+            unitProvider = getService(UnitProvider.class);
+            assertThat(unitProvider, is(notNullValue()));
+        });
     }
 
     @AfterEach
     public void tearDown() {
-        Thing thing = systemInfoThing;
+        Thing thing = systeminfoThing;
         if (thing != null) {
-            // Remove the systeminfo thing. The handler will be also disposed automatically
+            // Remove the systeminfo thing. The handler will also be disposed automatically
             Thing removedThing = thingRegistry.forceRemove(thing.getUID());
             assertThat("The systeminfo thing cannot be deleted", removedThing, is(notNullValue()));
             waitForAssert(() -> {
                 ThingHandler systemInfoHandler = thing.getHandler();
                 assertThat(systemInfoHandler, is(nullValue()));
             });
+            managedThingProvider.remove(thing.getUID());
         }
 
         if (testItem != null) {
@@ -205,6 +213,7 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
         }
 
         unregisterService(mockedSystemInfo);
+        unregisterService(volatileStorageService);
     }
 
     private void initializeThingWithChannelAndPID(String channelID, String acceptedItemType, int pid) {
@@ -256,40 +265,26 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
         ThingUID thingUID = new ThingUID(thingTypeUID, DEFAULT_TEST_THING_NAME);
 
         ChannelUID channelUID = new ChannelUID(thingUID, channelID);
-        ChannelTypeUID channelTypeUID = new ChannelTypeUID(SysteminfoBindingConstants.BINDING_ID,
-                channelUID.getIdWithoutGroup());
+        String channelTypeId = channelUID.getIdWithoutGroup();
+        if ("load1".equals(channelTypeId) || "load5".equals(channelTypeId) || "load15".equals(channelTypeId)) {
+            channelTypeId = "loadAverage";
+        }
+        ChannelTypeUID channelTypeUID = new ChannelTypeUID(SysteminfoBindingConstants.BINDING_ID, channelTypeId);
         Configuration channelConfig = new Configuration();
         channelConfig.put("priority", priority);
         channelConfig.put("pid", new BigDecimal(pid));
         Channel channel = ChannelBuilder.create(channelUID, acceptedItemType).withType(channelTypeUID)
                 .withKind(ChannelKind.STATE).withConfiguration(channelConfig).build();
 
-        Thing thing = ThingBuilder.create(thingTypeUID, thingUID).withConfiguration(thingConfiguration)
-                .withChannel(channel).build();
-        systemInfoThing = thing;
+        ThingBuilder thingBuilder = ThingBuilder.create(thingTypeUID, thingUID).withConfiguration(thingConfiguration)
+                .withChannel(channel);
+        // Make sure the thingTypeVersion matches the highest version in the update instructions of the binding to avoid
+        // new channels being added and the thing not initializing
+        thingBuilder = thingBuilder.withProperties(Map.of("thingTypeVersion", "1"));
+        Thing thing = thingBuilder.build();
+        systeminfoThing = thing;
 
-        // TODO: This is a technically not correct work-around as the thing types are currently not made available by
-        // the binding. It should be properly fixes in the binding that thing-types are added to the registry. The
-        // "correct" solution here would be to wait until the thing manager initializes the thing with a missing thing
-        // type, but that would make each test take 120+ s
-        ThingTypeProvider thingTypeProviderMock = mock(ThingTypeProvider.class);
-        when(thingTypeProviderMock.getThingType(ArgumentMatchers.any(ThingTypeUID.class), nullable(Locale.class)))
-                .thenReturn(mock(ThingType.class));
-        registerService(thingTypeProviderMock);
-
-        ChannelType channelTypeMock = mock(ChannelType.class);
-        when(channelTypeMock.getKind()).thenReturn(ChannelKind.STATE);
-        ChannelTypeProvider channelTypeProviderMock = mock(ChannelTypeProvider.class);
-        when(channelTypeProviderMock.getChannelType(ArgumentMatchers.any(ChannelTypeUID.class), nullable(Locale.class)))
-                .thenReturn(channelTypeMock);
-        registerService(channelTypeProviderMock);
-
-        ManagedThingProvider managedThingProvider = getService(ThingProvider.class, ManagedThingProvider.class);
-        assertThat(managedThingProvider, is(notNullValue()));
-
-        if (managedThingProvider != null) {
-            managedThingProvider.add(thing);
-        }
+        managedThingProvider.add(thing);
 
         waitForAssert(() -> {
             SysteminfoHandler handler = (SysteminfoHandler) thing.getHandler();
@@ -305,7 +300,7 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
     }
 
     private void assertItemState(String acceptedItemType, String itemName, String priority, State expectedState) {
-        Thing thing = systemInfoThing;
+        Thing thing = systeminfoThing;
         if (thing == null) {
             throw new AssertionError("Thing is null");
         }
@@ -347,7 +342,7 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
     private void intializeItem(ChannelUID channelUID, String itemName, String acceptedItemType) {
         GenericItem item = null;
         if (acceptedItemType.startsWith("Number")) {
-            item = new NumberItem(acceptedItemType, itemName);
+            item = new NumberItem(acceptedItemType, itemName, unitProvider);
         } else if ("String".equals(acceptedItemType)) {
             item = new StringItem(itemName);
         }
@@ -356,13 +351,6 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
         }
         itemRegistry.add(item);
         testItem = item;
-
-        ManagedItemChannelLinkProvider itemChannelLinkProvider = getService(ManagedItemChannelLinkProvider.class);
-        assertThat(itemChannelLinkProvider, is(notNullValue()));
-
-        if (itemChannelLinkProvider == null) {
-            return;
-        }
 
         itemChannelLinkProvider.add(new ItemChannelLink(itemName, channelUID));
     }
@@ -385,7 +373,7 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
 
     private void testInvalidConfiguration() {
         waitForAssert(() -> {
-            Thing thing = systemInfoThing;
+            Thing thing = systeminfoThing;
             if (thing != null) {
                 assertThat("Invalid configuration is used !", thing.getStatus(), is(equalTo(ThingStatus.OFFLINE)));
                 assertThat(thing.getStatusInfo().getStatusDetail(),
@@ -414,6 +402,30 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
 
         initializeThingWithChannel(channnelID, acceptedItemType);
         assertItemState(acceptedItemType, DEFAULT_TEST_ITEM_NAME, DEFAULT_CHANNEL_TEST_PRIORITY, UnDefType.UNDEF);
+    }
+
+    @Test
+    public void assertChannelCpuMaxFreq() {
+        String channnelID = SysteminfoBindingConstants.CHANNEL_CPU_MAXFREQ;
+        String acceptedItemType = "Number:Frequency";
+
+        QuantityType<Frequency> mockedCpuMaxFreqValue = new QuantityType<>(2500, Units.HERTZ);
+        when(mockedSystemInfo.getCpuMaxFreq()).thenReturn(mockedCpuMaxFreqValue);
+
+        initializeThingWithChannel(channnelID, acceptedItemType);
+        assertItemState(acceptedItemType, DEFAULT_TEST_ITEM_NAME, DEFAULT_CHANNEL_TEST_PRIORITY, mockedCpuMaxFreqValue);
+    }
+
+    @Test
+    public void assertChannelCpuFreq() {
+        String channnelID = SysteminfoBindingConstants.CHANNEL_CPU_FREQ;
+        String acceptedItemType = "Number:Frequency";
+
+        QuantityType<Frequency> mockedCpuFreqValue = new QuantityType<>(2500, Units.HERTZ);
+        when(mockedSystemInfo.getCpuFreq(0)).thenReturn(mockedCpuFreqValue);
+
+        initializeThingWithChannel(channnelID, acceptedItemType);
+        assertItemState(acceptedItemType, DEFAULT_TEST_ITEM_NAME, DEFAULT_CHANNEL_TEST_PRIORITY, mockedCpuFreqValue);
     }
 
     @Test
@@ -1005,26 +1017,27 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
         discoveryServiceMock.startScan();
 
         Inbox inbox = getService(Inbox.class);
-        assertThat(inbox, is(notNullValue()));
+        waitForAssert(() -> {
+            assertThat(inbox, is(notNullValue()));
+        });
 
         if (inbox == null) {
             return;
         }
 
         waitForAssert(() -> {
-            List<DiscoveryResult> results = inbox.stream().filter(InboxPredicates.forThingUID(computerUID))
-                    .collect(toList());
+            List<DiscoveryResult> results = inbox.stream().filter(InboxPredicates.forThingUID(computerUID)).toList();
             assertFalse(results.isEmpty(), "No Thing with UID " + computerUID.getAsString() + " in inbox");
         });
 
         inbox.approve(computerUID, SysteminfoDiscoveryService.DEFAULT_THING_LABEL, null);
 
         waitForAssert(() -> {
-            systemInfoThing = thingRegistry.get(computerUID);
-            assertThat(systemInfoThing, is(notNullValue()));
+            systeminfoThing = thingRegistry.get(computerUID);
+            assertThat(systeminfoThing, is(notNullValue()));
         });
 
-        Thing thing = systemInfoThing;
+        Thing thing = systeminfoThing;
         if (thing == null) {
             return;
         }
@@ -1115,7 +1128,7 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
         String acceptedItemType = "Number";
         initializeThingWithChannel(DEFAULT_TEST_CHANNEL_ID, acceptedItemType);
 
-        Thing thing = systemInfoThing;
+        Thing thing = systeminfoThing;
         if (thing == null) {
             throw new AssertionError("Thing is null");
         }
